--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@
 footer {
     background-color: #434343 !important;
     color: #f8f8ff !important;
+    height: 370px !important;
 }
 .text-color {
     color: #f8f8f8 !important;
@@ -59,9 +60,19 @@ footer {
     transition: all 1s ease-in-out;
 }
 
+.dropdown-menu-tt {
+    display: none;
+    position: absolute;
+    background-color: white !important;
+}
+
 .carousel-inner img {
-    width: 1600px;
+    width: 100%;
     height: 400px;
+}
+.carousel-inner-slide img {
+    width: 520px;
+    height: 420px;
 }
 
 .link {
@@ -93,12 +104,42 @@ footer {
     margin-bottom: 5px;
     margin-left: 3px;
 }
-#accordion .card-header .link:after {
+#accordion .card-header .link-col:after {
     font-family: "FontAwesome";
     content: "-";
     float: right;
 }
 
-#accordion .card-header .link.collapsed:after {
+#accordion .card-header .link-col.collapsed:after {
     content: "+";
 }
+/*scroll table*/
+.my-custom-scrollbar {
+    position: relative;
+    height: 200px;
+    overflow: auto;
+}
+.table-wrapper-scroll-y {
+    display: block;
+}
+
+.btn-dark {
+    border-radius: 15px !important;
+}
+
+/* input file */
+/* .inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+}
+.inputfile + label {
+    font-size: 0.75em;
+    font-weight: 700;
+    color: skyblue;
+    background-color: white;
+    display: inline-block;
+    cursor: pointer;
+} */
